--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,12 @@
         <activity
             android:name=".view.TextActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".view.AlarmActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        <activity
+            android:name=".view.AlarmActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".view.MemoActivity"
+            android:theme="@android:style/Theme.Material.Light.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
