--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.shining.memo">
 
-    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.FLASHLIGHT"/>
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -34,29 +34,43 @@
         <activity
             android:name=".view.RecordingEditActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-          <!--android:windowSoftInputMode="stateVisible|adjustPan|stateHidden|stateAlwaysHidden"-->
+        <!-- android:windowSoftInputMode="stateVisible|adjustPan|stateHidden|stateAlwaysHidden" -->
         <activity
             android:name=".view.PhotoConfirmActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".view.RecordingViewActivity"
+        <activity
+            android:name=".view.RecordingViewActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".view.AlarmClockActivity"
-            android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+        <activity
+            android:name=".view.AlarmClockActivity"
+            android:theme="@style/Theme.AppCompat.Light.Dialog" />
+
         <receiver
             android:name=".receiver.AlarmReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.shining.memo.alarmandnotice"/>
+                <action android:name="com.shining.memo.alarmandnotice" />
             </intent-filter>
         </receiver>
-        <activity android:name=".home.MemoActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        <activity
+            android:name=".home.MemoActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".home.GuideActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/FullScreen"/>
+
+        <activity android:name=".home.WelcomeActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
