--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/app_launch_icon"
         android:supportsRtl="true"
+        android:logo="@drawable/app_launch_icon"
+
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
         <activity
