--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
             android:theme="@style/FullScreen"/>
 
         <activity android:name=".home.MemoActivity"
-            android:theme="@style/OrangeTheme" />
+            android:theme="@style/OrangeTheme"
+            android:launchMode="singleTask"/>
 
         <activity
             android:name=".view.AlarmActivity"
