--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,38 +36,44 @@
         <activity
             android:name=".home.GuideActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/FullScreen"/>
+            android:theme="@style/FullScreen" />
 
         <activity android:name=".home.MemoActivity"
             android:theme="@style/OrangeTheme"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name=".view.AlarmActivity"
-            android:theme="@style/OrangeTheme" />
+            android:theme="@style/OrangeTheme"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name=".view.CalendarActivity"
-            android:theme="@style/OrangeTheme" />
+            android:theme="@style/OrangeTheme"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name=".view.ListActivity"
-            android:theme="@style/OrangeTheme" />
+            android:theme="@style/OrangeTheme"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name=".view.TaskActivity"
-
+            android:screenOrientation="portrait"
             android:theme="@style/OrangeTheme" />
-          <!--android:windowSoftInputMode="stateVisible|adjustPan|stateHidden|stateAlwaysHidden"-->
         <activity
             android:name=".view.PhotoConfirmActivity"
-            android:theme="@style/OrangeTheme" />
+            android:theme="@style/OrangeTheme"
+            android:screenOrientation="portrait"/>
 
         <activity android:name=".view.AlarmClockActivity"
-            android:theme="@style/OrangeTheme"/>
+            android:theme="@style/OrangeTheme"
+            android:screenOrientation="portrait"/>
 
         <activity android:name=".view.NoteActivity"
-            android:theme="@style/OrangeTheme"/>
+            android:theme="@style/OrangeTheme"
+            android:screenOrientation="portrait"/>
 
         <receiver
             tools:ignore="ExportedReceiver"
