--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,11 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_launch_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_launch_icon"
         android:supportsRtl="true"
-        android:logo="@mipmap/ic_launcher"
+        android:logo="@drawable/app_launch_icon"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
 
